; ModuleID = '/home/carl/AnghaBench/openssl/crypto/err/extr_err.c_int_err_get_item.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/err/extr_err.c_int_err_get_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@err_string_lock = common dso_local global i32 0, align 4
@int_error_hash = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @int_err_get_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @int_err_get_item(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i32* null, i32** %3, align 8
  %4 = load i32, i32* @err_string_lock, align 4
  %5 = call i32 @CRYPTO_THREAD_read_lock(i32 %4)
  %6 = load i32, i32* @int_error_hash, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = call i32* @lh_ERR_STRING_DATA_retrieve(i32 %6, i32* %7)
  store i32* %8, i32** %3, align 8
  %9 = load i32, i32* @err_string_lock, align 4
  %10 = call i32 @CRYPTO_THREAD_unlock(i32 %9)
  %11 = load i32*, i32** %3, align 8
  ret i32* %11
}

declare dso_local i32 @CRYPTO_THREAD_read_lock(i32) #1

declare dso_local i32* @lh_ERR_STRING_DATA_retrieve(i32, i32*) #1

declare dso_local i32 @CRYPTO_THREAD_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
